kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knote
namespace: knote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: knote
  template:
    metadata:
      labels:
        app: knote
    spec:
      containers:
        - name: app
          image: limarktest/nodejs-docker:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
