kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knote
  namespace: knote
spec:
  selector:
    app: knote
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
